--- a/app/markdown/_includes/_head.html
+++ b/app/markdown/_includes/_head.html
@@ -10,6 +10,13 @@
         <!-- endbower -->
         <!-- endbuild -->
 
+
+        <!-- build:js scripts/main.js -->
+        <!-- bower:js -->
+        <!-- endbower -->
+        <!-- endbuild -->
+
+
         <!-- build:css({.tmp,app}) styles/main.css -->
         <!-- endbuild -->
 
